--- a/example/index.html
+++ b/example/index.html
@@ -189,23 +189,23 @@
 
               <button id="move" class="btn btn-sm btn-default">
                 <span class="glyphicon glyphicon-move"></span>
-                Move Walls
+                Sposta Parete
               </button>
               <button id="draw" class="btn btn-sm btn-default">
                 <span class="glyphicon glyphicon-pencil"></span>
-                Draw Walls
+                Disegna Parete
               </button>
               <button id="delete" class="btn btn-sm btn-default">
                 <span class="glyphicon glyphicon-remove"></span>
-                Delete Walls
+                Cancella Parete
               </button>
               <span class="pull-right">
-                <button class="btn btn-primary btn-sm" id="update-floorplan">Done &raquo;</button>
+                <button class="btn btn-primary btn-sm" id="update-floorplan">Fine &raquo;</button>
               </span>
 
             </div>
             <div id="draw-walls-hint">
-              Press the "Esc" key to stop drawing walls
+              Premi il tasto "Esc" per finire di disegnare le pareti
             </div>
           </div>
 
