--- a/example/index.html
+++ b/example/index.html
@@ -178,7 +178,7 @@
             </div>
 
             <div id="loading-modal">
-              <h1>Loading...</h1>  
+              <h1>Caricamento...</h1>  
             </div>
           </div>
 
