--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blueprint 3D -Examples</title>
+    <title>Blueprint 3D-Examples</title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/example.css" rel="stylesheet">
@@ -47,17 +47,17 @@
               <br /><br />
               <button class="btn btn-block btn-danger" id="context-menu-delete">
                 <span class="glyphicon glyphicon-trash"></span> 
-                Delete Item
+                Cancella elemento
               </button>
             <br />
             <div class="panel panel-default">
-              <div class="panel-heading">Adjust Size</div>
+              <div class="panel-heading">Varia Dimensione</div>
               <div class="panel-body" style="color: #333333">
 
                 <div class="form form-horizontal" class="lead">
                   <div class="form-group">
                     <label class="col-sm-5 control-label">
-                       Width
+                       L
                     </label>
                     <div class="col-sm-6">
                       <input type="number" class="form-control" id="item-width">
@@ -65,7 +65,7 @@
                   </div>
                   <div class="form-group">
                     <label class="col-sm-5 control-label">
-                      Depth 
+                      P 
                     </label>
                     <div class="col-sm-6">
                       <input type="number" class="form-control" id="item-depth">
@@ -73,18 +73,18 @@
                   </div>
                   <div class="form-group">
                     <label class="col-sm-5 control-label">
-                      Height
+                      H
                     </label>
                     <div class="col-sm-6">
                       <input type="number" class="form-control" id="item-height">
                     </div>
                   </div>
                 </div>
-                <small><span class="text-muted">Measurements in inches.</span></small>
+                <small><span class="text-muted">Misure in pollici.</span></small>
               </div>
             </div>
 
-            <label><input type="checkbox" id="fixed" /> Lock in place</label>
+            <label><input type="checkbox" id="fixed" /> Blocca posizione</label>
             <br /><br />
             </div>
           </div>
@@ -178,7 +178,7 @@
             </div>
 
             <div id="loading-modal">
-              <h1>Loading...</h1>  
+              <h1>Carica Esempio...</h1>  
             </div>
           </div>
 
@@ -189,23 +189,23 @@
 
               <button id="move" class="btn btn-sm btn-default">
                 <span class="glyphicon glyphicon-move"></span>
-                Move Walls
+                Muovi Parete
               </button>
               <button id="draw" class="btn btn-sm btn-default">
                 <span class="glyphicon glyphicon-pencil"></span>
-                Draw Walls
+                Disegna Parete
               </button>
               <button id="delete" class="btn btn-sm btn-default">
                 <span class="glyphicon glyphicon-remove"></span>
-                Delete Walls
+                Cancella Parete
               </button>
               <span class="pull-right">
-                <button class="btn btn-primary btn-sm" id="update-floorplan">Done &raquo;</button>
+                <button class="btn btn-primary btn-sm" id="update-floorplan">Fine &raquo;</button>
               </span>
 
             </div>
             <div id="draw-walls-hint">
-              Press the "Esc" key to stop drawing walls
+              Premi tasto "Esc" per finire disegno pareti
             </div>
           </div>
 
