--- a/example/index.html
+++ b/example/index.html
@@ -26,7 +26,7 @@
           <!-- Main Navigation -->
           <ul class="nav nav-sidebar">
             <li id="floorplan_tab"><a href="#">
-              Edit Floorplan
+              Edita il Piano
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
             <li id="design_tab"><a href="#">
@@ -34,7 +34,7 @@
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
             <li id="items_tab"><a href="#">
-              Add Items
+              Aggiungi Arredo
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
           </ul>
@@ -47,7 +47,7 @@
               <br /><br />
               <button class="btn btn-block btn-danger" id="context-menu-delete">
                 <span class="glyphicon glyphicon-trash"></span> 
-                Cancella elemento
+                Cancella Arredo
               </button>
             <br />
             <div class="panel panel-default">
