--- a/example/index.html
+++ b/example/index.html
@@ -30,7 +30,7 @@
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
             <li id="design_tab"><a href="#">
-              Design
+              Progetto in Corso
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
             <li id="items_tab"><a href="#">
