--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blueprint 3D-Examples</title>
+    <title>Blueprint Esempio</title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/example.css" rel="stylesheet">
@@ -26,7 +26,7 @@
           <!-- Main Navigation -->
           <ul class="nav nav-sidebar">
             <li id="floorplan_tab"><a href="#">
-              Edita il Piano
+              Edita Pianta
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
             <li id="design_tab"><a href="#">
@@ -92,7 +92,7 @@
           <!-- Floor textures -->
           <div id="floorTexturesDiv" style="display:none; padding: 0 20px">
             <div class="panel panel-default">
-              <div class="panel-heading">Adjust Floor</div>
+              <div class="panel-heading">Cambia Pavimentazione</div>
               <div class="panel-body" style="color: #333333">
 
                 <div class="col-sm-6" style="padding: 3px">
@@ -107,7 +107,7 @@
           <!-- Wall Textures -->
           <div id="wallTextures" style="display:none; padding: 0 20px">
             <div class="panel panel-default">
-              <div class="panel-heading">Adjust Wall</div>
+              <div class="panel-heading">Cambia Tipo di Parete</div>
               <div class="panel-body" style="color: #333333">
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/marbletiles.jpg" texture-stretch="false" texture-scale="300">
@@ -137,14 +137,14 @@
 
             <div id="main-controls">
               <a href="#" class="btn btn-default btn-sm" id="new">
-                New
+                Nuovo
               </a>
               <a href="#" class="btn btn-default btn-sm" id="saveFile">
-                Save
+                Salva
               </a>
               <a class="btn btn-sm btn-default btn-file">
                <input type="file" class="hidden-input" id="loadFile">
-               Load
+               Carica
               </a>
             </div>
 
@@ -178,7 +178,7 @@
             </div>
 
             <div id="loading-modal">
-              <h1>Carica Esempio...</h1>  
+              <h1>Caricamento Esempio...</h1>  
             </div>
           </div>
 
