--- a/example/index.html
+++ b/example/index.html
@@ -80,7 +80,7 @@
                     </div>
                   </div>
                 </div>
-                <small><span class="text-muted">Misure in pollici.</span></small>
+                <small><span class="text-muted">Misure in centimetri (cm)</span></small>
               </div>
             </div>
 
