--- a/example/index.html
+++ b/example/index.html
@@ -37,6 +37,14 @@
               Aggiungi Arredo
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
+            <li id="items_tab"><a href="#">
+              Arredo tipo 1
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+            </a></li>
+            <li id="items_tab"><a href="#">
+              Arredo tipo 2
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+            </a></li>
           </ul>
           <hr />
 
