--- a/example/index.html
+++ b/example/index.html
@@ -45,6 +45,14 @@
               Arredo tipo 2
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
+            <li id="items_tab"><a href="#">
+              Arredo tipo 3
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+            </a></li>
+            <li id="items_tab"><a href="#">
+              Arredo tipo 4
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+            </a></li>
           </ul>
           <hr />
 
