--- a/example/index.html
+++ b/example/index.html
@@ -13,6 +13,8 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     
+    <script src="js/items1__.js"></script>
+    
     <script src="js/items.js"></script>
     <script src="js/example.js"></script>
   </head>
