--- a/example/index.html
+++ b/example/index.html
@@ -39,7 +39,7 @@
               Aggiungi Arredo
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
-            <li id="items_tab"><a href="#">
+            <li id="items_tab1"><a href="#">
               Arredo tipo 1
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
