--- a/example/index.html
+++ b/example/index.html
@@ -15,6 +15,8 @@
         
     <script src="js/items.js"></script>
     <script src="js/example.js"></script>
+    
+    <script src="js/items1__.js"></script>
   </head>
 
   <body>
