--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     
-    <script src="js/items1__.js"></script>
+    <script src="js/items_1.js"></script>
     
     <script src="js/items.js"></script>
     <script src="js/example.js"></script>
@@ -37,6 +37,10 @@
             </a></li>
             <li id="items_tab"><a href="#">
               Aggiungi Arredo
+              <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+              </a></li>
+            <li id="items_tab_1"><a href="#">
+              Aggiungi Arredo 1
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
           </ul>
