--- a/example/index.html
+++ b/example/index.html
@@ -223,6 +223,14 @@
               <!-- Items added here by items.js -->
             </div>
           </div>
+          
+          <!-- Add Items_1-->
+          <div id="add-items_1">
+            <div class="row" id="items-wrapper">
+
+              <!-- Items added here by items.js -->
+            </div>
+          </div>
       
         </div>
         <!-- End Right Column -->
