--- a/example/index.html
+++ b/example/index.html
@@ -226,7 +226,7 @@
           
           <!-- Add Items_1-->
           <div id="add-items_1">
-            <div class="row" id="items-wrapper">
+            <div class="row" id="items-wrapper_1">
 
               <!-- Items added here by items.js -->
             </div>
