--- a/example/index.html
+++ b/example/index.html
@@ -40,7 +40,7 @@
               Aggiungi Arredo
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
-            <li id="items_tab"><a href="#">
+            <li id="items_tab_1"><a href="#">
               Aggiungi Arredo 1
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
               </a></li>
