--- a/example/index.html
+++ b/example/index.html
@@ -224,13 +224,13 @@
             </div>
           </div>
           
-          <!-- Add Items_1-->
-          <div id="add-items_1">
-            <div class="row" id="items-wrapper_1">
+         <!-- Add Items_1 commento-->
+      <!--    <div id="add-items_1">   -->
+       <!--     <div class="row" id="items-wrapper_1">  -->
 
-              <!-- Items added here by items.js -->
-            </div>
-          </div>
+              <!-- Items added here by items_1.js commento -->
+        <!--    </div>   -->
+      <!--    </div>     -->
       
         </div>
         <!-- End Right Column -->
