--- a/example/index.html
+++ b/example/index.html
@@ -225,7 +225,7 @@
           </div>
           
          <!-- Add Items_1 commento-->
-          <div id="add-items">   
+          <div id="add-items_1">   
             <div class="row" id="items-wrapper_1">  
 
               <!-- Items added here by items_1.js commento -->
