--- a/example/index.html
+++ b/example/index.html
@@ -156,6 +156,9 @@
               <a href="#" class="btn btn-default btn-sm" id="saveFile">
                 Salva
               </a>
+              <a href="#" class="btn btn-default btn-sm" id="saveJpg">
+                Jpg
+              </a>
               <a class="btn btn-sm btn-default btn-file">
                <input type="file" class="hidden-input" id="loadFile">
                Carica
