--- a/example/index.html
+++ b/example/index.html
@@ -144,7 +144,7 @@
         </div>
 
         <!-- Right Column -->
-        <div class="col-xs-9 main">    
+        <div class="col-xs-9 main">    <div id="imagesave">
 
           <!-- 3D Viewer -->
           <div id="viewer">
@@ -160,6 +160,22 @@
                <input type="file" class="hidden-input" id="loadFile">
                Carica
               </a>
+            
+<button id="save_image_locally">img</button>
+<script>
+  $('#save_image_locally').click(function(){
+    html2canvas($('#imagesave'), 
+    {
+      onrendered: function (canvas) {
+        var a = document.createElement('a');
+        // toDataURL defaults to png, so we need to request a jpeg, then convert for file download.
+        a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+        a.download = 'somefilename.jpg';
+        a.click();
+      }
+    });
+  });
+</script>
               
             </div>
 
@@ -252,7 +268,7 @@
         </div> 
         <!-- End Right Column -->
       </div>
-    </div> 
+      </div> </div>
 
   </body>
 </html>
