--- a/example/index.html
+++ b/example/index.html
@@ -20,6 +20,8 @@
     
     <script src="js/example.js"></script>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="js/html2canvas.js"></script>
        
   </head>
 
