--- a/example/index.html
+++ b/example/index.html
@@ -163,7 +163,7 @@
                Carica
               </a>
             
-<button id="save_image_locally">img</button>
+<button id="save_image_locally" class="btn btn-default btn-sm">img</button>
 <script>
   $('#save_image_locally').click(function(){
     html2canvas($('#imagesave'), 
