--- a/example/index.html
+++ b/example/index.html
@@ -163,7 +163,10 @@
                Carica
               </a>
             
-<button id="save_image_locally" class="btn btn-default btn-sm">img</button>
+<!-- <button id="save_image_locally" class="btn btn-default btn-sm">img</button>  -->
+<a href="#" class="btn btn-default btn-sm" id="save_image_locally">
+  Img
+</a>  
 <script>
   $('#save_image_locally').click(function(){
     html2canvas($('#imagesave'), 
