--- a/example/index.html
+++ b/example/index.html
@@ -165,7 +165,7 @@
             
 <!-- <button id="save_image_locally" class="btn btn-default btn-sm">img</button>  -->
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
-  Img
+  ImgJpg
 </a>  
 <script>
   $('#save_image_locally').click(function(){
