--- a/example/index.html
+++ b/example/index.html
@@ -165,7 +165,7 @@
             
 <!-- <button id="save_image_locally" class="btn btn-default btn-sm">img</button>  -->
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
-  ImgJpgS
+  ImgJpgY
 </a>  
 <script>
   $('#save_image_locally').click(function(){
@@ -177,8 +177,7 @@
         a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
         a.download = 'myfilename.jpg';
         a.click();   */
-        var a = document.createElement('a');
-        a = canvas.getContext("2d");       // get 2D context of canvas
+        var a = document.createElement('a'); 
         a.textAlign = "right";
         a.textBaseline = "top";                // start with drawing text from top
         a.font = "20px sans-serif";            // set a font and size
