--- a/example/index.html
+++ b/example/index.html
@@ -165,7 +165,7 @@
             
 
 <a href="#" class="btn btn-default btn-sm" id="save_image_locally">
-  ImgJpg
+  ImgJpgX
 </a>  
 <script>
   $('#save_image_locally').click(function(){
