--- a/example/index.html
+++ b/example/index.html
@@ -188,7 +188,7 @@
 <a href="storiablueblue" style="font-size: 20px; font-style: italic; color: red;">storiablue</a>
 --> 
               
-<span class="mcright"><a href="storiablueblue" class="fontkaushan">storiablue12345</a>
+<span class="mcright"><a href="storiablueblue" class="fontkaushan">storiabluee12345</a>
 </span>
                     
 
