--- a/example/index.html
+++ b/example/index.html
@@ -76,7 +76,8 @@
                        L
                     </label>
                     <div class="col-sm-6">
-                      <input type="number" class="form-control" id="item-width">
+                   <!--   <input type="number" class="form-control" id="item-width"> se voglio campo L modificabile -->
+                    <input type="number" class="form-control" id="item-width" readonly> 
                     </div>
                   </div>
                   <div class="form-group">
@@ -84,7 +85,8 @@
                       P 
                     </label>
                     <div class="col-sm-6">
-                      <input type="number" class="form-control" id="item-depth">
+                    <!--  <input type="number" class="form-control" id="item-depth"> se voglio campo P modificabile -->
+                      <input type="number" class="form-control" id="item-depth" readonly>
                     </div>
                   </div>
                   <div class="form-group">
@@ -92,7 +94,8 @@
                       H
                     </label>
                     <div class="col-sm-6">
-                      <input type="number" class="form-control" id="item-height">
+                    <!--   <input type="number" class="form-control" id="item-height"> se voglio campo H modificabile -->
+                      <input type="number" class="form-control" id="item-height" readonly>
                     </div>
                   </div>
                 </div>
