--- a/example/index.html
+++ b/example/index.html
@@ -60,7 +60,14 @@
           <div id="context-menu">
             <div style="margin: 0 20px">
               <span id="context-menu-name" class="lead"></span>
-              <br /><br />
+              <br />
+              <!--  -->
+              <button class="btn btn-block btn-info" id="context-menu-delete">
+                <span class="glyphicon glyphicon-align-center"></span> 
+                Zoom arredo
+              </button>
+              <!--  -->
+              <br />
               <button class="btn btn-block btn-danger" id="context-menu-delete">
                 <span class="glyphicon glyphicon-trash"></span> 
                 Cancella Arredo
