--- a/example/index.html
+++ b/example/index.html
@@ -60,7 +60,7 @@
           <div id="context-menu">
             <div style="margin: 0 20px">
               <span id="context-menu-name" class="lead"></span>
-              <br /> <br />
+              <br /> 
               <button class="btn btn-block btn-danger" id="context-menu-delete">
                 <span class="glyphicon glyphicon-trash"></span> 
                 Cancella Arredo
@@ -71,7 +71,7 @@
               <button class="btn btn-block btn-info" id="context-menu-delete">
                 <span class="glyphicon glyphicon-align-center"></span> 
                 Zoom arredo
-              </button>
+              </button><br />
               <!--  -->
               
             <div class="panel panel-default">
