--- a/example/index.html
+++ b/example/index.html
@@ -68,10 +68,11 @@
             <br />
               
                <!--  -->
-              <button class="btn btn-block btn-info" id="context-menu-delete">
+            <!--  <button class="btn btn-block btn-info" id="context-menu-delete">  -->
+              <a class="btn btn-block btn-info" href="www.google.com">
                 <span class="glyphicon glyphicon-align-center"></span> 
                 Zoom arredo
-              </button><br />
+              </a><br />
               <!--  -->
               
             <div class="panel panel-default">
