--- a/example/index.html
+++ b/example/index.html
@@ -69,7 +69,7 @@
               
                <!--  -->
             <!--  <button class="btn btn-block btn-info" id="context-menu-delete">  -->
-              <a class="btn btn-block btn-info" href="www.google.com">
+              <a class="btn btn-block btn-info" href="http://www.google.com">
                 <span class="glyphicon glyphicon-align-center"></span> 
                 Zoom arredo
               </a><br />
