--- a/example/index.html
+++ b/example/index.html
@@ -71,7 +71,7 @@
               
             <!--   <a class="btn btn-block btn-info" href="http://www.google.com">  -->
                 
-                 <button id="modelGallery" type="submit" class="btn btn-link" > 
+                 <button id="modelGalleryPass" type="submit" class="btn btn-link" > 
                 <span class="glyphicon glyphicon-align-center"></span> 
                 Zoom arredo
               </button><br />
