--- a/example/index.html
+++ b/example/index.html
@@ -72,7 +72,7 @@
             <!--  <a class="btn btn-block btn-info" href="http://www.google.com">  -->   
              <!--     <button id="modelGallery" type="submit" class="btn btn-link" >   -->
               
-                <a class="btn btn-block btn-info" href="" id="modelGallery">
+                <a class="btn btn-block btn-info" href="" id="modelGallerylink">
                 <span class="glyphicon glyphicon-align-center"></span> 
                 Zoom arredo
               </a><br />
