--- a/example/index.html
+++ b/example/index.html
@@ -113,6 +113,8 @@
 
             <label><input type="checkbox" id="fixed" /> Blocca posizione</label>
             <br /><br />
+            <label><span class="text-muted" style="color:green">Prezzo: </span></label>
+            <br /><br />
             </div>
           </div>
 
