--- a/example/index.html
+++ b/example/index.html
@@ -113,7 +113,7 @@
 
             <label><input type="checkbox" id="fixed" /> Blocca posizione</label>
             <br />
-            <label><span class="text-muted" style="color:green">Prezzo: </span></label>
+            <label><span class="text-muted" style="color:green">Prezzo: </span><i><span id="modelPricetot"></span></i></label>
             <br /><br />
             </div>
           </div>
