--- a/example/index.html
+++ b/example/index.html
@@ -114,7 +114,13 @@
             <label><input type="checkbox" id="fixed" /> Blocca posizione</label>
             <br />
             <label><span class="text-muted" style="color:green">Prezzo: </span><i><span id="modelPricetot"></span></i></label>
-            <br /><br />
+            <br />
+              
+            <a class="btn btn-block btn-success" href="" id="modelGallerylink" target="_blank">
+                <span class="glyphicon glyphicon-align-center"></span> 
+                Info/Aggiungi al Carrello
+              </a><br /><br />  
+              
             </div>
           </div>
 
