--- a/example/index.html
+++ b/example/index.html
@@ -250,7 +250,7 @@
             </div>
 
             <div id="loading-modal">
-              <h1>Caricamento Esempio...</h1>  
+              <h1>Caricamento Stanza di Esempio...</h1>  
             </div>
           </div>
 
