--- a/example/index.html
+++ b/example/index.html
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/texverde.jpg" texture-stretch="false" texture-scale="300">
-                    <img alt="Thumbnail ottagono grigio" src="rooms/thumbnails/thumbnails_texverde.jpg" />
+                    <img alt="Thumbnail tex verde" src="rooms/thumbnails/thumbnails_texverde.jpg" />
                   </a>
                 </div>
                 
@@ -186,7 +186,7 @@
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/piastrellebianche2.jpg" texture-stretch="false" texture-scale="100">
-                    <img alt="Thumbnail light brick" src="rooms/thumbnails/thumbnail_piastrellebianche.jpg" />
+                    <img alt="Thumbnail piastrelle bianche" src="rooms/thumbnails/thumbnail_piastrellebianche.jpg" />
                   </a>
                 </div>
                 
