--- a/example/index.html
+++ b/example/index.html
@@ -143,11 +143,6 @@
                 </div>
                 
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/texverde2.jpg" texture-stretch="false" texture-scale="">
-                    <img alt="Thumbnail texverde" src="rooms/thumbnails/thumbnails_texverde.jpg" />
-                  </a>
-                </div>
-                <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/marmogran.jpg" texture-stretch="false" texture-scale="">
                     <img alt="Thumbnail marmo granito" src="rooms/thumbnails/thumbnails_marmogran.jpg" />
                   </a>
@@ -178,7 +173,7 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/texverde2.jpg" texture-stretch="false" texture-scale="">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/texverde.jpg" texture-stretch="false" texture-scale="">
                     <img alt="Thumbnail texverde" src="rooms/thumbnails/thumbnails_texverde.jpg" />
                   </a>
                 </div>
