--- a/example/index.html
+++ b/example/index.html
@@ -137,13 +137,13 @@
                 </div>
                 
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/cotto_rosa2.jpg" texture-stretch="false" texture-scale="">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/cotto_rosa2.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail cotto rosa" src="rooms/thumbnails/thumbnails_cotto_rosa.jpg" />
                   </a>
                 </div>
                 
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/marmogran.jpg" texture-stretch="false" texture-scale="">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/marmogran.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail marmo granito" src="rooms/thumbnails/thumbnails_marmogran.jpg" />
                   </a>
                 </div>
@@ -173,7 +173,7 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/texverde.jpg" texture-stretch="false" texture-scale="">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/texverde.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail texverde" src="rooms/thumbnails/thumbnails_texverde.jpg" />
                   </a>
                 </div>
