--- a/example/index.html
+++ b/example/index.html
@@ -143,7 +143,13 @@
                 </div>
                 
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/marmogran.jpg" texture-stretch="false" texture-scale="300">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/turchesepoint.jpg" texture-stretch="false" texture-scale="300">
+                    <img alt="Thumbnail marmo granito" src="rooms/thumbnails/thumbnails_turchesepoint.jpg" />
+                  </a>
+                </div>
+                
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/marmogran.jpg" texture-stretch="false" texture-scale="">
                     <img alt="Thumbnail marmo granito" src="rooms/thumbnails/thumbnails_marmogran.jpg" />
                   </a>
                 </div>
@@ -173,7 +179,7 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/texverde.jpg" texture-stretch="false" texture-scale="300">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/texverde.jpg" texture-stretch="false" texture-scale="">
                     <img alt="Thumbnail texverde" src="rooms/thumbnails/thumbnails_texverde.jpg" />
                   </a>
                 </div>
