--- a/example/index.html
+++ b/example/index.html
@@ -211,7 +211,7 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/righecoloriscuri.jpg" texture-stretch="false" texture-scale="100">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/righecoloriscuri.jpg" texture-stretch="false" texture-scale="">
                     <img alt="Thumbnail righe colori scuri" src="rooms/thumbnails/thumbnails_righecoloriscuri.jpg" />
                   </a>
                 </div>
