--- a/example/index.html
+++ b/example/index.html
@@ -206,12 +206,12 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/piastrellebianche.jpg" texture-stretch="false" texture-scale="100">
-                    <img alt="Thumbnail piastrelle bianche" src="rooms/thumbnails/thumbnail_piastrellebianche.jpg" />
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mattonellebianche.JPG" texture-stretch="false" texture-scale="100">
+                    <img alt="Thumbnail mattonelle bianche" src="rooms/thumbnails/thumbnails_mattonellebianca.JPG" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/righecoloriscuri.jpg" texture-stretch="false" texture-scale="300">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/righecoloriscuri.jpg" texture-stretch="true" texture-scale="">
                     <img alt="Thumbnail righe colori scuri" src="rooms/thumbnails/thumbnails_righecoloriscuri.jpg" />
                   </a>
                 </div>
