--- a/example/index.html
+++ b/example/index.html
@@ -191,6 +191,11 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mattoazzurro.jpg" texture-stretch="false" texture-scale="100">
+                    <img alt="Thumbnail azzurro onda" src="rooms/thumbnails/thumbnails_mattoazzurro.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mixterre.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail mixterre" src="rooms/thumbnails/thumbnails_mixterre.jpg" />
                   </a>
