--- a/example/index.html
+++ b/example/index.html
@@ -216,7 +216,7 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mosasgre.jpg" texture-stretch="true" texture-scale="">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mosasgre.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail mosaico1" src="rooms/thumbnails/thumbnails_mosasgre.jpg" />
                   </a>
                 </div>
