--- a/example/index.html
+++ b/example/index.html
@@ -196,6 +196,21 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mattobiancofuga.jpg" texture-stretch="false" texture-scale="100">
+                    <img alt="Thumbnail bianco con fuga nera" src="rooms/thumbnails/thumbnails_mattobiancofuga.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/Bianco-Carrara.jpg" texture-stretch="false" texture-scale="100">
+                    <img alt="Thumbnail bianco carrara" src="rooms/thumbnails/thumbnails_Bianco-Carrara.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/giallosiena.jpg" texture-stretch="false" texture-scale="100">
+                    <img alt="Thumbnail giallo siena" src="rooms/thumbnails/thumbnails_giallosiena.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mixterre.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail mixterre" src="rooms/thumbnails/thumbnails_mixterre.jpg" />
                   </a>
