--- a/example/index.html
+++ b/example/index.html
@@ -241,11 +241,40 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mosaicocer.jpg" texture-stretch="false" texture-scale="300">
+                    <img alt="Thumbnail mosaicocer" src="rooms/thumbnails/thumbnails_mosaicocer.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq2.jpg" texture-stretch="false" texture-scale="400">
                     <img alt="Thumbnail parquet2" src="rooms/thumbnails/thumbnails_parq2.jpg" />
                   </a>
                 </div>
-                
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moquette.jpg" texture-stretch="false" texture-scale="500">
+                    <img alt="Thumbnail moquette grigio scuro" src="rooms/thumbnails/thumbnails_moquette.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moqnera.jpg" texture-stretch="false" texture-scale="500">
+                    <img alt="Thumbnail moquette nera" src="rooms/thumbnails/thumbnails_moqnera.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moquettegriver.jpg" texture-stretch="false" texture-scale="500">
+                    <img alt="Thumbnail moquette grigio verde" src="rooms/thumbnails/thumbnails_moquettegriver.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moqbianca.jpg" texture-stretch="false" texture-scale="500">
+                    <img alt="Thumbnail moquette bianca" src="rooms/thumbnails/thumbnails_moqbianca.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moquette_rossa.jpg" texture-stretch="false" texture-scale="500">
+                    <img alt="Thumbnail moquette rossa" src="rooms/thumbnails/thumbnails_moquette_rossa.jpg" />
+                  </a>
+                </div>
                 
               </div>
             </div>
