--- a/example/index.html
+++ b/example/index.html
@@ -256,8 +256,8 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moqnera.jpg" texture-stretch="false" texture-scale="500">
-                    <img alt="Thumbnail moquette nera" src="rooms/thumbnails/thumbnails_moqnera.jpg" />
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moqnera.JPG" texture-stretch="false" texture-scale="500">
+                    <img alt="Thumbnail moquette nera" src="rooms/thumbnails/thumbnails_moqnera.JPG" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
