--- a/example/index.html
+++ b/example/index.html
@@ -280,6 +280,16 @@
                     <img alt="Thumbnail moquette rossa" src="rooms/thumbnails/thumbnails_moquette_rossa.jpg" />
                   </a>
                 </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/redsquare.jpg" texture-stretch="false" texture-scale="100">
+                    <img alt="Thumbnail redsquare" src="rooms/thumbnails/thumbnails_redsquare.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/sigarettarossa.jpg" texture-stretch="false" texture-scale="200">
+                    <img alt="Thumbnail sigarettarossa" src="rooms/thumbnails/thumbnails_sigarettarossa.jpg" />
+                  </a>
+                </div>
                 
               </div>
             </div>
