--- a/example/index.html
+++ b/example/index.html
@@ -181,8 +181,13 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/CRosso.jpg" texture-stretch="false" texture-scale="100">
+                    <img alt="Thumbnail CRosso" src="rooms/thumbnails/thumbnails_CRosso.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/cottomedio.jpg" texture-stretch="false" texture-scale="100">
-                    <img alt="Thumbnail cotto medio" src="rooms/thumbnails/thumbnails_cottomedio.jpg" />
+                    <img alt="Thumbnail cottored" src="rooms/thumbnails/thumbnails_cottomedio.jpg" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
@@ -219,10 +224,35 @@
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/mixterre.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail mixterre" src="rooms/thumbnails/thumbnails_mixterre.jpg" />
                   </a>
-                </div> 
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/pia_rosse.jpg" texture-stretch="false" texture-scale="100">
+                    <img alt="Thumbnail cotto pia_rosse" src="rooms/thumbnails/thumbnails_pia_rosse.jpg" />
+                  </a>
+                </div>
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/starparq.jpg" texture-stretch="false" texture-scale="300">
                     <img alt="Thumbnail star parquet" src="rooms/thumbnails/thumbnails_starparq.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq3.jpg" texture-stretch="false" texture-scale="300">
+                    <img alt="Thumbnail parq3" src="rooms/thumbnails/thumbnails_parq3.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq5.jpg" texture-stretch="false" texture-scale="300">
+                    <img alt="Thumbnail parq5" src="rooms/thumbnails/thumbnails_parq5.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq6.jpg" texture-stretch="false" texture-scale="300">
+                    <img alt="Thumbnail parq6" src="rooms/thumbnails/thumbnails_parq6.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq7.jpg" texture-stretch="false" texture-scale="300">
+                    <img alt="Thumbnail parq7" src="rooms/thumbnails/thumbnails_parq7.jpg" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
