--- a/example/index.html
+++ b/example/index.html
@@ -236,8 +236,13 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/hardwood.jpg" texture-stretch="false" texture-scale="300">
+                    <img alt="Thumbnail parq3" src="rooms/thumbnails/thumbnail_hardwood.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/parq3.jpg" texture-stretch="false" texture-scale="300">
-                    <img alt="Thumbnail parq3" src="rooms/thumbnails/thumbnails_parq3.jpg" />
+                    <img alt="Thumbnail parq4 hardwood" src="rooms/thumbnails/thumbnails_parq3.jpg" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
