--- a/example/index.html
+++ b/example/index.html
@@ -361,6 +361,36 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/bianco.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail bianco" src="rooms/thumbnails/thumbnails_bianco.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/rosamix.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail rosamix" src="rooms/thumbnails/thumbnails_rosamix.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/lavagna.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail lavagna" src="rooms/thumbnails/thumbnails_lavagna.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/lilla.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail lilla" src="rooms/thumbnails/thumbnails_lilla.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/ROSSOSCUROPASTELLO.png" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail ROSSOSCUROPASTELLO" src="rooms/thumbnails/thumbnails_ROSSOSCUROPASTELLO.png" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/redforte.png" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail redforte" src="rooms/thumbnails/thumbnails_redforte.png" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/righecoloriscuri.jpg" texture-stretch="true" texture-scale="">
                     <img alt="Thumbnail righe colori scuri" src="rooms/thumbnails/thumbnails_righecoloriscuri.jpg" />
                   </a>
@@ -368,6 +398,16 @@
                 <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/pareteblack.jpg" texture-stretch="false" texture-scale="100">
                     <img alt="Thumbnail parete black" src="rooms/thumbnails/thumbnails_pareteblack.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moquette.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail moquette grigio scuro" src="rooms/thumbnails/thumbnails_moquette.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/moqnera.JPG" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail moquette nera" src="rooms/thumbnails/thumbnails_moqnera.JPG" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
