--- a/example/index.html
+++ b/example/index.html
@@ -391,6 +391,11 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/grigio_sahara.jpg" texture-stretch="true" texture-scale="">
+                    <img alt="Thumbnail grigiosahara" src="rooms/thumbnails/thumbnails_grigio_sahara.jpg" />
+                  </a>
+                </div>
+                <div class="col-sm-6" style="padding: 3px">
                   <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/righecoloriscuri.jpg" texture-stretch="true" texture-scale="">
                     <img alt="Thumbnail righe colori scuri" src="rooms/thumbnails/thumbnails_righecoloriscuri.jpg" />
                   </a>
