--- a/example/index.html
+++ b/example/index.html
@@ -451,17 +451,17 @@
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/roccia1.jpg" texture-stretch="true" texture-scale="">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/roccia1.jpg" texture-stretch="false" texture-scale="512">
                     <img alt="Thumbnail roccia1" src="rooms/thumbnails/thumbnails_roccia1.jpg" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/roccia2.jpg" texture-stretch="true" texture-scale="">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/roccia2.jpg" texture-stretch="false" texture-scale="512">
                     <img alt="Thumbnail roccia2" src="rooms/thumbnails/thumbnails_roccia2.jpg" />
                   </a>
                 </div>
                 <div class="col-sm-6" style="padding: 3px">
-                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/quarzite.jpg" texture-stretch="true" texture-scale="">
+                  <a href="#" class="thumbnail texture-select-thumbnail" texture-url="rooms/textures/quarzite.jpg" texture-stretch="false" texture-scale="512">
                     <img alt="Thumbnail quarzite" src="rooms/thumbnails/thumbnails_quarzite.jpg" />
                   </a>
                 </div>
